# divide21X

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: divide21x_pipeline.yml
divide21x/: __init__.py
divide21x/challenge_maker/: challenge_maker.py  challenge_schema.yaml  schema.yaml  state_action_schema.yaml  submission_schema.yaml
divide21x/challenges/: 2025-11-13.json  2025-11-14.json
divide21x/challenges/2025-11/: 15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  (+6 more)
divide21x/challenges/2025-11-12/: 21.json  22.json  23.json
divide21x/challenges/2025-11-13/: 0.json  19.json  2.json  3.json
divide21x/envs/: __init__.py  divide21x.py  divide21x_action_only.py  divide21x_main.py
divide21x/evaluation/: evaluator.py
divide21x/grading/: grader.py  rubric.json
divide21x/graph_maker/: graph_maker.py
divide21x/ground_truth/: ground_truth.py
divide21x/inspection/: inspector.py  inspector_action.py
divide21x/llm_api/: client_class.py  llm_client.py  registry.json  registry_budget.json  requestor.py
divide21x/results/: 2025-11-13.json  2025-11-14.json
divide21x/simulator/: divide21env_simulator.py
divide21x/utils/: logger.py  util.py
tests/: test_env.py
tests/challenge_maker/: test.py
tests/divide21x/: divide21x_test.py
tests/divide21x_main_folder/: divide21x_main.py
tests/divide21xtester/: test_env.py
tests/evaluation/: evaluation_test.py
tests/inspection/: inspector_action_test.py  inspector_test.py
tests/llm_api/: test.py
tests/simulator/: test.py
(+99 files in other folders)
