[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divide21x"
version = "0.1.0"
description = "Divide21X Phase 1: Action-State benchmark environment for faithful strategic reasoning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jacinto Jeje Matamba Quimua" }
]
keywords = ["Explainable AI", "Reinforcement Learning", "Symbolic AI", "Benchmark", "Divide21"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.23",
    "divide21env>=0.2.6",
]

[project.urls]
Homepage = "https://github.com/jaci-hub/divide21x"
Repository = "https://github.com/jaci-hub/divide21x"
